welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:24: error: reassignment to val
		y = y + 1;
                  ^ColumnByColumn:25: error: reassignment to val
		cpt = cpt + 1;
                    ^ColumnByColumn:29: error: reassignment to val
		y = 0;
                  ^ColumnByColumn:30: error: reassignment to val
		x = x + 1;
                  ^ColumnByColumn:31: error: reassignment to val
		cpt = cpt + 1;
                    ^